RTF import: delete graphic helper once it's not used (fdo#42640)